# quickjs-android-suitable-sys

./: Cargo.toml  README.md  build.rs  quickjs+extern.c  quickjs+extern.h
quickjs/: quickjs.c
scripts/: generate-bindings.rs
src/: bindings.rs  lib.rs
