[package]
authors = ["Alastair Coote <rust@alastair.is>"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "QuickJS Javascript Engine FFI bindings, suitable for use on Android"
edition = "2018"
keywords = ["quickjs"]
license = "MIT"
name = "quickjs_android_suitable_sys"
readme = "README.md"
repository = "https://github.com/alastaircoote/quickjs-android-suitable-sys"
version = "0.1.1"

[features]
bignum = []
default = ["bignum"]
dump_leaks = []

[build-dependencies]
bindgen = {version = "0.57.0"}
cc = {version = "1.0"}
